[package]
name = "solar-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1"
mcp3008 = "1.0.0"
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

